@@ -514,4 +514,23 @@ exp='20#j12 -7622 -7622 -j12 -20#j12'
 unset n
 
 # ======
+# '\0' in format string skips input
+# https://github.com/ksh93/ksh/issues/725
+exp=1N2N3N4N5N6N7N
+got=$(printf '%s\0' 1 2 3 4 5 6 7 | tr '\0' N)
+[[ $got == "$exp" ]] || err_exit "'\0' in format string skips input (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+got=$(printf '%s%Z' 1 2 3 4 5 6 7 | tr '\0' N)
+[[ $got == "$exp" ]] || err_exit "'%Z' in format string skips input (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+
+exp=1NN2NN3NN4NN5NN6NN7NN
+got=$(printf '%s\0\0' 1 2 3 4 5 6 7 | tr '\0' N)
+[[ $got == "$exp" ]] || err_exit "'\0\0' in format string skips input (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+got=$(printf '%s%Z%Z' 1 2 3 4 5 6 7 | tr '\0' N)
+[[ $got == "$exp" ]] || err_exit "'%Z%Z' in format string skips input (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+
+exp=$'1N\n2N\n3N\n4N\nX'
+got=$(printf '%s%c%c' 1 $'\0' $'\n' 2 $'\0' $'\n' 3 $'\0' $'\n' 4 $'\0' $'\n' | tr '\0' N; echo X)
+[[ $got == "$exp" ]] || err_exit "regression involving %c as \$'\0' (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+
+# ======
 exit $((Errors<125?Errors:125))
